force-app/main/default/objects/Project_Study__c/Project_Study__c.object-meta.xml
<CustomObject>
    <label>Customer Insight</label>
    <nameField>
        <displayFormat>PS{000000}</displayFormat>
        <label>Project Study No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>