force-app/main/default/objects/Project_Study__c/fields/NPS_Complete__c.field-meta.xml
<CustomField>
    <fullName>NPS_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPS Complete</label>
    <type>Checkbox</type>
</CustomField>