force-app/main/default/objects/Project_Study__c/fields/NPS_Notes__c.field-meta.xml
<CustomField>
    <fullName>NPS_Notes__c</fullName>
    <label>NPS Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>