force-app/main/default/objects/Project_Study__c/fields/NPS_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>NPS_Scheduled_Date__c</fullName>
    <label>NPS Scheduled Date</label>
    <type>Date</type>
</CustomField>