force-app/main/default/objects/Project_Study__c/fields/Project_Health_Complete__c.field-meta.xml
<CustomField>
    <fullName>Project_Health_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Health Complete</label>
    <type>Checkbox</type>
</CustomField>