force-app/main/default/objects/Project_Study__c/fields/Project_Health_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Health_Scheduled_Date__c</fullName>
    <label>Project Health Scheduled Date</label>
    <type>Date</type>
</CustomField>