force-app/main/default/objects/Project_Study__c/fields/Project_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Project_Health_Score__c</fullName>
    <label>Project Health Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>